<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_filter1_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_topbar_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFACB3"
        android:paddingVertical="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/home_filter1_logo_iv"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="APPNAME"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_filter_bt"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/main_threedots"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/home_filter_ll"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/home_filter_bg"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_topbar_ll">

        <TextView
            android:id="@+id/home_filter1_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/home_filter_1"
            android:textColor="@color/home_filter_text"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="6dp"
            android:background="@color/home_filter_line" />

        <TextView
            android:id="@+id/home_filter2_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/home_filter_2"
            android:textColor="@color/home_filter_text"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="6dp"
            android:background="@color/home_filter_line" />

        <TextView
            android:id="@+id/home_filter3_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/home_filter_3"
            android:textColor="@color/home_filter_text"
            android:textSize="22sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:background="@color/home_bg">
    <LinearLayout
        android:id="@+id/home_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/home_topbar_ll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/home_topbar_ll"/>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>